force-app/main/default/objects/Metadata_Request__c/Metadata_Request__c.object-meta.xml
<CustomObject>
    <label>Metadata Request</label>
    <nameField>
        <displayFormat>MR-{000000}</displayFormat>
        <label>Metadata Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Metadata Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>