force-app/main/default/objects/Metadata_Request__c/fields/Controlling_Product_Lines__c.field-meta.xml
<CustomField>
    <fullName>Controlling_Product_Lines__c</fullName>
    <description>Select Product Lines on which this Software version should be dependent to be visible on Case records. If not selected any, the value will not be visible for any Product Line</description>
    <inlineHelpText>Select Product Lines on which this Software version should be dependent to be visible on Case records. If not selected any, the value will not be visible for any Product Line</inlineHelpText>
    <label>Controlling Product Lines</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Field__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CDM</fullName>
            </value>
            <value>
                <fullName>Polaris</fullName>
            </value>
            <value>
                <fullName>DatosIO</fullName>
                <label>Mosaic/DatosIO</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Spam/Junk</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>