force-app/main/default/objects/Metadata_Request__c/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <label>Object</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Field__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Case</fullName>
            </value>
            <value>
                <fullName>User, Knowledge Centered Support (KCS), Release Version, Release</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>