force-app/main/default/objects/Metadata_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Field__c</columns>
    <columns>Status__c</columns>
    <columns>Value__c</columns>
    <columns>Object__c</columns>
    <columns>Controlling_Product_Lines__c</columns>
    <columns>Message__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>